--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ var STYLE_PREFIX = 'wsite';
 						
 
 <div style="text-align:right;"><div style="height: 0px; overflow: hidden;"></div>
-<a class="wsite-button wsite-button-small wsite-button-normal" href="https://on3s.weebly.com/10441086108510721090.html">
+<a class="wsite-button wsite-button-small wsite-button-normal" href="/donate.html">
 <span class="wsite-button-inner">Купить донат</span>
 </a>
 <div style="height: 10px; overflow: hidden;"></div></div>
@@ -291,7 +291,7 @@ var STYLE_PREFIX = 'wsite';
 						
 
 <div style="text-align:center;"><div style="height: 0px; overflow: hidden;"></div>
-<a class="wsite-button wsite-button-small wsite-button-normal" href="https://on3s.weebly.com/1055108810721074108010831072.html">
+<a class="wsite-button wsite-button-small wsite-button-normal" href="/rules.html">
 <span class="wsite-button-inner">Правила</span>
 </a>
 <div style="height: 10px; overflow: hidden;"></div></div>
