--- a/donate.html
+++ b/donate.html
@@ -186,8 +186,7 @@ var STYLE_PREFIX = 'wsite';
 
 <h2 class="wsite-content-title" style="text-align:center;"><font color="#ffffff" size="7">&#1055;&#1086;&#1082;&#1091;&#1087;&#1082;&#1072; &#1087;&#1088;&#1080;&#1074;&#1080;&#1083;&#1077;&#1075;&#1080;&#1081;.</font></h2>
 
-<div><div id="599330281708537354" align="center" style="width: 100%; overflow-y: hidden;" class="wcustomhtml"><p><div id="mcdApiContainer"></div><script type="text/javascript" src="https://mcdonate.ru/api/mcd_script.js?server_id=82986&container_id=mcdApiContainer&beauty"></script></div>
-
+<div id="mcdApiContainer"></div><script type="text/javascript" src="https://mcdonate.ru/api/mcd_script.js?server_id=82986&container_id=mcdApiContainer&beauty"></script>
 
 
 </div>
