--- a/donate.html
+++ b/donate.html
@@ -189,7 +189,11 @@ var STYLE_PREFIX = 'wsite';
 <div id="mcdApiContainer"></div><script type="text/javascript" src="https://mcdonate.ru/api/mcd_script.js?server_id=82986&container_id=mcdApiContainer&beauty"></script>
 
 
+			</div>
+		</div>
+      </div>
 
+	</div>
 </div>
 <div class="wsite-section-wrap">
 	<div class="wsite-section wsite-body-section wsite-background-11" style="height: auto;" >
