--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<!-- saved from url=(0024)https://on3s.weebly.com/ -->
 <html lang="ru" class="wf-brandongrotesque-n4-active wf-brandongrotesque-i4-active wf-brandongrotesque-n9-active wf-brandongrotesque-i9-active wf-active"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<title>LASZLOCRAFT - Домой</title><meta property="og:site_name" content="LASZLOCRAFT">
 <meta property="og:title" content="LASZLOCRAFT">
 <meta property="og:description" content="Наш проект работает с 2016 года и основывается на концепции чистого выживания. Кроме того, у нас дешевые...">
-<meta property="og:url" content="http://on3s.weebly.com/">
+<meta property="og:url" content="http://on3s.github.io/">
 
 
 
@@ -100,7 +99,7 @@ var STYLE_PREFIX = 'wsite';
 		
 		
 	</head>
-	<body class="header-page  wsite-page-index  sticky-nav-on full-width-on header-scroll-animate-off  wsite-theme-light wsite-nav-condensed fade-in" style="min-height: 100%; position: relative; height: auto !important; padding-bottom: 64px !important;"><div class="wrapper">
+	<body class="header-page  wsite-page-index  sticky-nav-on full-width-on header-scroll-animate-off  wsite-theme-light wsite-nav-condensed fade-in collapse" style="min-height: 100%; position: relative; height: auto !important; padding-bottom: 64px !important;"><div class="wrapper">
     <div class="unite-header">
       <div class="nav-wrap">
         <div class="container">
