--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>LASZLOCRAFT - &#1044;&#1086;&#1084;&#1086;&#1081;</title><meta property="og:site_name" content="LASZLOCRAFT" />
 <meta property="og:title" content="LASZLOCRAFT" />
 <meta property="og:description" content="Наш проект работает с 2016 года и основывается на концепции чистого выживания. Кроме того, у нас дешевые..." />
-<meta property="og:url" content="http://on3s.weebly.com/" />
+<meta property="og:url" content="http://on3s.github.io/" />
 
 
 
@@ -332,8 +332,23 @@ var STYLE_PREFIX = 'wsite';
     <div class="footer-wrap">
         <div class="footer">
 
+<div id="weebly-footer-signup-container">
+	<div class="signup-container-header trigger-signup">
+		<button class="start-free">Создайте бесплатный сайт.</button>
+		<div class="powered-by">
+			При поддержке <span class="link weebly-icon"></span>
+		</div>
+	</div>
+</div>
 
 
+<script type="text/javascript" src="//cdn2.editmysite.com/js/site/footerSignup.js?buildTime=1523584872"></script>
+<script type="text/javascript">
+	Weebly.footer.setupContainer('cdn2.editmysite.com', '1523584872', 'www.weebly.com');
+</script>
+</div>
+    </div>
+  </div>
 
   <div class="nav mobile-nav">
     <label class="hamburger"><span></span></label>
