--- a/index.html
+++ b/index.html
@@ -328,15 +328,9 @@ var STYLE_PREFIX = 'wsite';
     </div>
 
     <div class="footer-wrap">
+      <div class="container">
         <div class="footer">
 
-
-
-
-<script type="text/javascript" src="./index_files/footerSignup.js.Без названия"></script>
-<script type="text/javascript">
-	Weebly.footer.setupContainer('cdn2.editmysite.com', '1523584872', 'www.weebly.com');
-</script>
 
   <div class="nav mobile-nav">
     <label class="hamburger"><span></span></label>
