--- a/donate.html
+++ b/donate.html
@@ -186,9 +186,12 @@ var STYLE_PREFIX = 'wsite';
 
 <h2 class="wsite-content-title" style="text-align:center;"><font color="#ffffff" size="7">&#1055;&#1086;&#1082;&#1091;&#1087;&#1082;&#1072; &#1087;&#1088;&#1080;&#1074;&#1080;&#1083;&#1077;&#1075;&#1080;&#1081;.</font></h2>
 
-<div id="mcdApiContainer"></div><script type="text/javascript" src="https://mcdonate.ru/api/mcd_script.js?server_id=82986&container_id=mcdApiContainer&beauty"></script>
+<div><div id="599330281708537354" align="center" style="width: 100%; overflow-y: hidden;" class="wcustomhtml"><p><div id="mcdApiContainer"></div><script type="text/javascript" src="https://mcdonate.ru/api/mcd_script.js?server_id=82986&container_id=mcdApiContainer&beauty"></script></div>
 
 
+
+</div>
+			</div>
 		</div>
       </div>
 
@@ -211,21 +214,21 @@ var STYLE_PREFIX = 'wsite';
 
 <div><div class="wsite-image wsite-image-border-none " style="padding-top:10px;padding-bottom:10px;margin-left:0px;margin-right:0px;text-align:left">
 <a>
-<img src="//on3s.weebly.com/uploads/1/1/9/0/119046743/1138796717_orig.png" alt="Фотография" style="width:auto;max-width:100%" />
+<img src="/uploads/1/1/9/0/119046743/1138796717_orig.png" alt="Фотография" style="width:auto;max-width:100%" />
 </a>
 <div style="display:block;font-size:90%"></div>
 </div></div>
 
 <div><div class="wsite-image wsite-image-border-none " style="padding-top:10px;padding-bottom:10px;margin-left:0;margin-right:0;text-align:center">
 <a>
-<img src="//on3s.weebly.com/uploads/1/1/9/0/119046743/1_orig.png" alt="Фотография" style="width:auto;max-width:100%" />
+<img src="/uploads/1/1/9/0/119046743/2_orig.png" alt="Фотография" style="width:auto;max-width:100%" />
 </a>
 <div style="display:block;font-size:90%"></div>
 </div></div>
 
 <div><div class="wsite-image wsite-image-border-none " style="padding-top:10px;padding-bottom:10px;margin-left:0;margin-right:0;text-align:center">
 <a>
-<img src="//on3s.weebly.com/uploads/1/1/9/0/119046743/2_orig.png" alt="Фотография" style="width:auto;max-width:100%" />
+<img src="/uploads/1/1/9/0/119046743/34_orig.png" alt="Фотография" style="width:auto;max-width:100%" />
 </a>
 <div style="display:block;font-size:90%"></div>
 </div></div>
@@ -238,25 +241,31 @@ var STYLE_PREFIX = 'wsite';
 
 <div><div class="wsite-image wsite-image-border-none " style="padding-top:10px;padding-bottom:10px;margin-left:0;margin-right:0;text-align:center">
 <a>
-<img src="//on3s.weebly.com/uploads/1/1/9/0/119046743/3_orig.png" alt="Фотография" style="width:auto;max-width:100%" />
+<img src="/uploads/1/1/9/0/119046743/1_orig.png" alt="Фотография" style="width:auto;max-width:100%" />
 </a>
 <div style="display:block;font-size:90%"></div>
 </div></div>
 
 <div><div class="wsite-image wsite-image-border-none " style="padding-top:10px;padding-bottom:10px;margin-left:0;margin-right:0;text-align:center">
 <a>
-<img src="//on3s.weebly.com/uploads/1/1/9/0/119046743/34_orig.png" alt="Фотография" style="width:auto;max-width:100%" />
+<img src="/uploads/1/1/9/0/119046743/3_orig.png" alt="Фотография" style="width:auto;max-width:100%" />
 </a>
 <div style="display:block;font-size:90%"></div>
 </div></div>
 
 <div><div class="wsite-image wsite-image-border-none " style="padding-top:10px;padding-bottom:10px;margin-left:0;margin-right:0;text-align:center">
 <a>
-<img src="//on3s.weebly.com/uploads/1/1/9/0/119046743/5_1_orig.png" alt="Фотография" style="width:auto;max-width:100%" />
+<img src="/uploads/1/1/9/0/119046743/5_1_orig.png" alt="Фотография" style="width:auto;max-width:100%" />
 </a>
 <div style="display:block;font-size:90%"></div>
 </div></div>
 
+<div><div class="wsite-image wsite-image-border-none " style="padding-top:10px;padding-bottom:10px;margin-left:0;margin-right:0;text-align:center">
+<a>
+<img src="/uploads/1/1/9/0/119046743/5_orig.png" alt="Фотография" style="width:auto;max-width:100%" />
+</a>
+<div style="display:block;font-size:90%"></div>
+</div></div>
 
 
 					
@@ -279,6 +288,24 @@ var STYLE_PREFIX = 'wsite';
       <div class="container">
         <div class="footer">
 
+<div id="weebly-footer-signup-container">
+	<div class="signup-container-header trigger-signup">
+		<button class="start-free">Создайте бесплатный сайт.</button>
+		<div class="powered-by">
+			При поддержке <span class="link weebly-icon"></span>
+		</div>
+	</div>
+</div>
+
+
+<script type="text/javascript" src="//cdn2.editmysite.com/js/site/footerSignup.js?buildTime=1523584872"></script>
+<script type="text/javascript">
+	Weebly.footer.setupContainer('cdn2.editmysite.com', '1523584872', 'www.weebly.com');
+</script>
+</div>
+      </div>
+    </div>
+  </div>
 
   <div class="nav mobile-nav">
     <label class="hamburger"><span></span></label>
