--- a/donate.html
+++ b/donate.html
@@ -87,7 +87,7 @@ var STYLE_PREFIX = 'wsite';
 <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js'></script>
 
 <script type="text/javascript" src="//cdn2.editmysite.com/js/lang/ru/stl.js?buildTime=1523584872&"></script>
-<script src="//cdn2.editmysite.com/js/site/main.js?buildTime=1523584872"></script><script type="text/javascript">_W.configDomain = "www.weebly.com";</script><script>_W.relinquish && _W.relinquish()</script>
+<script src="//cdn2.editmysite.com/js/site/main.js?buildTime=1523584872"></script><script type="text/javascript">_W.configDomain = "www.github.io";</script><script>_W.relinquish && _W.relinquish()</script>
 <script type="text/javascript" src="//cdn2.editmysite.com/js/lang/ru/stl.js?buildTime=1523584872&"></script><script> _W.themePlugins = [];</script><script type="text/javascript"> _W.recaptchaUrl = "https://www.google.com/recaptcha/api.js"; </script><script type="text/javascript"> window._W = window._W || {}; _W.showV2Footer = 0; </script><script type="text/javascript"><!--
 	
 	
