--- a/vote.html
+++ b/vote.html
@@ -83,7 +83,7 @@ var STYLE_PREFIX = 'wsite';
 <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js'></script>
 
 <script type="text/javascript" src="//cdn2.editmysite.com/js/lang/ru/stl.js?buildTime=1523584872&"></script>
-<script src="//cdn2.editmysite.com/js/site/main.js?buildTime=1523584872"></script><script type="text/javascript">_W.configDomain = "www.weebly.com";</script><script>_W.relinquish && _W.relinquish()</script>
+<script src="//cdn2.editmysite.com/js/site/main.js?buildTime=1523584872"></script><script type="text/javascript">_W.configDomain = "www.github.io";</script><script>_W.relinquish && _W.relinquish()</script>
 <script type="text/javascript" src="//cdn2.editmysite.com/js/lang/ru/stl.js?buildTime=1523584872&"></script><script> _W.themePlugins = [];</script><script type="text/javascript"> _W.recaptchaUrl = "https://www.google.com/recaptcha/api.js"; </script><script type="text/javascript"> window._W = window._W || {}; _W.showV2Footer = 0; </script><script type="text/javascript"><!--
 	
 	
@@ -246,25 +246,6 @@ var STYLE_PREFIX = 'wsite';
     <div class="footer-wrap">
       <div class="container">
         <div class="footer">
-
-<div id="weebly-footer-signup-container">
-	<div class="signup-container-header trigger-signup">
-		<button class="start-free">Создайте бесплатный сайт.</button>
-		<div class="powered-by">
-			При поддержке <span class="link weebly-icon"></span>
-		</div>
-	</div>
-</div>
-
-
-<script type="text/javascript" src="//cdn2.editmysite.com/js/site/footerSignup.js?buildTime=1523584872"></script>
-<script type="text/javascript">
-	Weebly.footer.setupContainer('cdn2.editmysite.com', '1523584872', 'www.weebly.com');
-</script>
-</div>
-      </div>
-    </div>
-  </div>
 
   <div class="nav mobile-nav">
     <label class="hamburger"><span></span></label>
