--- a/donate.html
+++ b/donate.html
@@ -188,8 +188,8 @@ var STYLE_PREFIX = 'wsite';
 
 <div id="mcdApiContainer"></div><script type="text/javascript" src="https://mcdonate.ru/api/mcd_script.js?server_id=82986&container_id=mcdApiContainer&beauty"></script>
 
-
-
+              <div>
+          <div>
       </div>
 
 	</div>
