--- a/donate.html
+++ b/donate.html
@@ -211,21 +211,21 @@ var STYLE_PREFIX = 'wsite';
 
 <div><div class="wsite-image wsite-image-border-none " style="padding-top:10px;padding-bottom:10px;margin-left:0px;margin-right:0px;text-align:left">
 <a>
-<img src="/uploads/1/1/9/0/119046743/1138796717_orig.png" alt="Фотография" style="width:auto;max-width:100%" />
+<img src="//on3s.weebly.com/uploads/1/1/9/0/119046743/1138796717_orig.png" alt="Фотография" style="width:auto;max-width:100%" />
 </a>
 <div style="display:block;font-size:90%"></div>
 </div></div>
 
 <div><div class="wsite-image wsite-image-border-none " style="padding-top:10px;padding-bottom:10px;margin-left:0;margin-right:0;text-align:center">
 <a>
-<img src="/uploads/1/1/9/0/119046743/2_orig.png" alt="Фотография" style="width:auto;max-width:100%" />
+<img src="//on3s.weebly.com/uploads/1/1/9/0/119046743/2_orig.png" alt="Фотография" style="width:auto;max-width:100%" />
 </a>
 <div style="display:block;font-size:90%"></div>
 </div></div>
 
 <div><div class="wsite-image wsite-image-border-none " style="padding-top:10px;padding-bottom:10px;margin-left:0;margin-right:0;text-align:center">
 <a>
-<img src="/uploads/1/1/9/0/119046743/34_orig.png" alt="Фотография" style="width:auto;max-width:100%" />
+<img src="//on3s.weebly.com/uploads/1/1/9/0/119046743/34_orig.png" alt="Фотография" style="width:auto;max-width:100%" />
 </a>
 <div style="display:block;font-size:90%"></div>
 </div></div>
@@ -238,28 +238,28 @@ var STYLE_PREFIX = 'wsite';
 
 <div><div class="wsite-image wsite-image-border-none " style="padding-top:10px;padding-bottom:10px;margin-left:0;margin-right:0;text-align:center">
 <a>
-<img src="/uploads/1/1/9/0/119046743/1_orig.png" alt="Фотография" style="width:auto;max-width:100%" />
+<img src="//on3s.weebly.com/uploads/1/1/9/0/119046743/1_orig.png" alt="Фотография" style="width:auto;max-width:100%" />
 </a>
 <div style="display:block;font-size:90%"></div>
 </div></div>
 
 <div><div class="wsite-image wsite-image-border-none " style="padding-top:10px;padding-bottom:10px;margin-left:0;margin-right:0;text-align:center">
 <a>
-<img src="/uploads/1/1/9/0/119046743/3_orig.png" alt="Фотография" style="width:auto;max-width:100%" />
+<img src="//on3s.weebly.com/uploads/1/1/9/0/119046743/3_orig.png" alt="Фотография" style="width:auto;max-width:100%" />
 </a>
 <div style="display:block;font-size:90%"></div>
 </div></div>
 
 <div><div class="wsite-image wsite-image-border-none " style="padding-top:10px;padding-bottom:10px;margin-left:0;margin-right:0;text-align:center">
 <a>
-<img src="/uploads/1/1/9/0/119046743/5_1_orig.png" alt="Фотография" style="width:auto;max-width:100%" />
+<img src="//on3s.weebly.com/uploads/1/1/9/0/119046743/5_1_orig.png" alt="Фотография" style="width:auto;max-width:100%" />
 </a>
 <div style="display:block;font-size:90%"></div>
 </div></div>
 
 <div><div class="wsite-image wsite-image-border-none " style="padding-top:10px;padding-bottom:10px;margin-left:0;margin-right:0;text-align:center">
 <a>
-<img src="/uploads/1/1/9/0/119046743/5_orig.png" alt="Фотография" style="width:auto;max-width:100%" />
+<img src="//on3s.weebly.com/uploads/1/1/9/0/119046743/5_orig.png" alt="Фотография" style="width:auto;max-width:100%" />
 </a>
 <div style="display:block;font-size:90%"></div>
 </div></div>
