--- a/index.html
+++ b/index.html
@@ -311,6 +311,13 @@ var STYLE_PREFIX = 'wsite';
 <div style="height: 10px; overflow: hidden;"></div></div>
 
 <div class="wsite-spacer" style="height:10px;"></div>
+<script type="text/javascript" src="//vk.com/js/api/openapi.js?153"></script>
+
+<!-- VK Widget -->
+<div id="vk_community_messages"></div>
+<script type="text/javascript">
+VK.Widgets.CommunityMessages("vk_community_messages", 124951861, {expandTimeout: "5000",tooltipButtonText: "Есть вопросы?"});
+</script>
 
 
 					
