--- a/vote.html
+++ b/vote.html
@@ -228,7 +228,13 @@ var STYLE_PREFIX = 'wsite';
 				<div><div id="238930123973630144" align="center" style="width: 100%; overflow-y: hidden;" class="wcustomhtml"><a href="http://minecraftrating.ru/vote/9270/" onclick="window.open( 'http://minecraftrating.ru/vote/9270/', '', 'toolbar=0,location=0,status=0,left=+500,top=50,menubar=0,scrollbars=yes,resizable=0,width=800,height=600' ); return false;"><img src="http://minecraftrating.ru/templates/theme/images/widgets/widget_vote.png" alt="Голосовать за сервер LaszloCraft" title="Голосовать за сервер LaszloCraft" width="88" height="31" /></a>
 <a href="http://mc-servera.ru/" onclick="window.open('http://mc-servera.ru/vote/59041', '', 'toolbar=0,location=0,status=0,left='+parseInt((document.body.offsetWidth-780) / 2)+',top=50,menubar=0,scrollbars=yes,resizable=0,width=800,height=493' ); return false;"><img src="http://mc-servera.ru/widgets/vote.png" alt="Голосовать за сервер LaszloCraft Surv 2017" title="Голосовать за сервер LaszloCraft Surv 2017" width="88" height="31" /></a>
 <a alt='Голосовать' title='Голосовать на mchead' href='http://mchead.ru/server/1513424/'><img alt='Голосовать' src='http://mchead.ru/server/1513424/bv88x31.png'></a></div>
+<script type="text/javascript" src="//vk.com/js/api/openapi.js?153"></script>
 
+<!-- VK Widget -->
+<div id="vk_community_messages"></div>
+<script type="text/javascript">
+VK.Widgets.CommunityMessages("vk_community_messages", 124951861, {disableExpandChatSound: "1",tooltipButtonText: "Есть вопросы?"});
+</script>
 
 
 </div>
