--- a/donate.html
+++ b/donate.html
@@ -266,7 +266,13 @@ var STYLE_PREFIX = 'wsite';
 </a>
 <div style="display:block;font-size:90%"></div>
 </div></div>
+<script type="text/javascript" src="//vk.com/js/api/openapi.js?153"></script>
 
+<!-- VK Widget -->
+<div id="vk_community_messages"></div>
+<script type="text/javascript">
+VK.Widgets.CommunityMessages("vk_community_messages", 124951861, {disableExpandChatSound: "1",tooltipButtonText: "Есть вопросы?"});
+</script>
 
 					
 				</td>			</tr>
