--- a/rules.html
+++ b/rules.html
@@ -205,7 +205,13 @@ var STYLE_PREFIX = 'wsite';
 
 <div class="wsite-spacer" style="height:50px;"></div>
 
+<script type="text/javascript" src="//vk.com/js/api/openapi.js?153"></script>
 
+<!-- VK Widget -->
+<div id="vk_community_messages"></div>
+<script type="text/javascript">
+VK.Widgets.CommunityMessages("vk_community_messages", 124951861, {disableExpandChatSound: "1",tooltipButtonText: "Есть вопросы?"});
+</script>
 					
 				</td>			</tr>
 		</tbody>
