--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta property="og:title" content="LASZLOCRAFT" />
 <meta property="og:description" content="Наш проект работает с 2016 года и основывается на концепции чистого выживания. Кроме того, у нас дешевые..." />
 <meta property="og:url" content="http://on3s.weebly.com/" />
-
+<meta name="interkassa-verification" content="1e738ebbee1ac846d0bdadf01254fe2f" />
 
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
