--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@ var STYLE_PREFIX = 'wsite';
 VK.Widgets.CommunityMessages("vk_community_messages", 124951861, {expandTimeout: "5000",tooltipButtonText: "Есть вопросы?"});
 </script>
 
-
+<a href="http://mc-servera.ru/servera-1.8.9" title="Сервера Майнкрафт 1.8.9">Сервера Майнкрафт 1.8.9</a>
 					
 				</td>			</tr>
 		</tbody>
